[package]
name = "vim_edit"
version = "0.1.0"
authors = ["gatewaynode <44749714+gatewaynode@users.noreply.github.com>"]
edition = "2018"
description = "A simple function to create or edit strings in vim from the CLI"
keywords = ["vim", "CLI", "tempfile"]
readme = "README.md"
license = "MIT"
license-file = "LICENSE.txt"
repostiory = "https://github.com/gatewaynode/vim_edit"
homepage = "https://gatewaynode.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.2.0"
subprocess = "0.2.6"
